# zipformer

./: .gitignore  .pre-commit-config.yaml  README-zh.md  README.md  mkdocs-zh.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: build-wheels.yml  docs.yml
docs/: index.md  mkdocs-zh.yml  mkdocs.yml
docs/custom/: index.html
docs/custom/assets/javascripts/: lang_switch.js
docs/custom/assets/stylesheets/: extra.css
docs/custom/partials/: comments.html
docs/en/: deployment.md  index.md  message.md  models.md  training.md
docs/en/api/: index.md
docs/zh/: deployment.md  index.md  message.md  models.md  training.md
docs/zh/api/: index.md
zipformer/: __init__.py  cli.py
zipformer/decode/: ngram_lm.py  post_processing.py  search.py  stream.py
zipformer/modules/: attention_decoder.py  decoder.py  joiner.py  model.py  onnx_model.py  optim.py  scaling.py  scaling3.py  scaling_converter.py  subsampling.py  zipformer.py
zipformer/utils/: __init__.py  checkpoint.py  diagnostics.py  dist.py  hooks.py  log.py  utils.py
