[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zipformer"
version = "0.1.0"
description = "zipformer: A faster and better encoder for ASR"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{ name = "Next-gen Kaldi Team" }]
dependencies = [
  "torch>=2.1.0",
  "torchaudio>=2.1.0",
  "simple-sentencepiece>=0.13",
  "atdataset>=0.1.6",
  "tqdm",
  "huggingface_hub",
  "modelscope",
  "onnx",
  "onnxconverter_common",
  "onnxruntime",
  "kaldifst",
  "kaldialign",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
docs = [
  "mkdocs-material>=9.0",
  "mkdocstrings[python]>=0.24",
  "mkdocs-minify-plugin",
]

[project.scripts]
zipformer = "zipformer.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["zipformer", "zipformer.*"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
